# nextcloud-talk-recording

./: AUTHORS.md  CHANGELOG.md  README.md  REUSE.toml  pyproject.toml  server.conf.in  start-container.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: lint-python.yml  pytest.yml
docker-compose/: Dockerfile  docker-compose.yml  wrap_chromium_binary
docs/: building.md  encoders.md  index.md  installation.md  prometheus-metrics.md  recording-api.md
packaging/: Makefile  build.sh
packaging/nextcloud-talk-recording/: setup.py  stdeb.cfg
packaging/nextcloud-talk-recording/debian/: nextcloud-talk-recording.install  nextcloud-talk-recording.postinst  nextcloud-talk-recording.service  py3dist-overrides
packaging/requests/debian/: py3dist-overrides
packaging/trio/: pip-build-constraints-debian11.txt
src/nextcloud/talk/recording/: BackendNotifier.py  Benchmark.py  Config.py  Participant.py  RecorderArgumentsBuilder.py  Server.py  Service.py  __init__.py  __main__.py
tests/: ConfigTest.py  MainTest.py  ServerTest.py
