[project]
name = "nextcloud-talk-recording"
description = "Recording server for Nextcloud Talk"
authors = [
    { name = "Nextcloud Talk Team" },
]
license = {text = "GNU AGPLv3+"}
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
dependencies = [
    "flask",
    "psutil",
    "pulsectl",
    "pyvirtualdisplay>=2.0",
    "requests-toolbelt",
    "selenium>=4.6.0",
    "websocket-client",
]
dynamic = ["version"]

[build-system]
requires = ["setuptools >= 69.3"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pylint>=2.9",
]

[project.urls]
repository = "https://github.com/nextcloud/nextcloud-talk-recording"

[project.scripts]
nextcloud-talk-recording = "nextcloud.talk.recording.__main__:main"
nextcloud-talk-recording-benchmark = "nextcloud.talk.recording.Benchmark:main"

[tool.setuptools.dynamic]
version = {attr = "nextcloud.talk.recording.__version__"}

[tool.pylint.basic]
argument-naming-style = 'camelCase'
attr-naming-style = 'camelCase'
function-naming-style = 'camelCase'
method-naming-style = 'camelCase'
module-naming-style = 'PascalCase'
variable-naming-style = 'camelCase'

ignore-paths = 'packaging/*'

disable = [
    "line-too-long",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-statements",
]
